[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[project]
name = "hqporner_api"
version = "2.0"
description = "A Python API for the Porn Site HQPorner.com"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = "LGPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Johannes Habel", email = "EchterAlsFake@proton.me" }
]
dependencies = [
    "bs4",
    "eaf_base_api",
]
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python",
]

[project.optional-dependencies]
full = ["lxml", "httpx[http2]", "httpx[socks]"] # H2 for HTTP 2.0 support, LXML for faster parsing speed, though optional :)


[project.urls]
Homepage = "https://github.com/EchterAlsFake/hqporner_api"

[project.scripts]
hqporner_api = "hqporner_api.api:main"

[tool.setuptools]
packages = { find = {} }

[tool.uv.build-backend]
module-name = "hqporner_api"
module-root = ""